--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yandex_algo",
+  "name": "yandex-algorithm-training",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
