--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "jest": "^27.0.4",
     "jest-cli": "^27.0.4"
   },
-  "bin": {}
+  "bin": {},
+  "dependencies": {
+    "canvas": "^2.8.0",
+    "jsdom": "^17.0.0"
+  }
 }
