chore: update Node.js engine requirement to >=22 and remove experimental VM modules configuration

--- a/package.json
+++ b/package.json
@@ -9,16 +9,11 @@
   "author": "Alexander Rzhanitsyn",
   "license": "ISC",
   "engines": {
-    "node": ">=14"
+    "node": ">=22"
   },
   "type": "module",
   "wallaby": {
-    "autoDetect": true,
-    "env": {
-      "params": {
-        "runner": "--experimental-vm-modules"
-      }
-    }
+    "autoDetect": true
   },
   "bin": {}
 }
